--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "quasar-project",
   "version": "0.0.1",
-  "description": "A Quasar Project",
-  "productName": "Quasar App",
-  "author": "",
   "private": true,
+  "description": "A Quasar Project",
+  "author": "",
   "scripts": {
+    "build": "quasar build",
     "lint": "eslint --ext .js,.vue ./",
-    "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
-    "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
-    "build": "quasar build"
+    "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
+    "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
@@ -23,10 +22,11 @@
     "quasar": "^2.8.0",
     "vue": "^3.4.18",
     "vue-chartjs": "^5.3.1",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.8.0",
+    "@vue/cli-plugin-router": "~5.0.0",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.1.0",
@@ -39,5 +39,6 @@
     "node": "^20 || ^18 || ^16",
     "npm": ">= 6.13.4",
     "yarn": ">= 1.21.1"
-  }
+  },
+  "productName": "Quasar App"
 }
