--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "@quasar/extras": "^1.16.4",
+    "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "quasar": "^2.8.0",
     "vue": "^3.4.18",
