--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "quasar": "^2.8.0",
     "vue": "^3.4.18",
     "vue-chartjs": "^5.3.1",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "vue3-apexcharts": "^1.5.3"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.8.0",
