--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "quasar": "^2.8.0",
+    "src": "^1.1.2",
     "vue": "^3.4.27",
     "vue-chartjs": "^5.3.1",
     "vue-router": "^4.0.13",
